2008-06-11 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* qualifierProvider.c:
	Expanded previous fix to 1983569 to included similar problem in gq

2008-06-10 Sean Swehla <smswehla@linux.vnet.ibm.com>

    * qualifierProvider.c
    Fixed [ 1983569 ] enumerate qualifier call causes qualifier provider to die
    (Patch by Sven Scheutz)

2008-06-02 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

    * interopServerProvider.c 
    Fixed [ 1945374 ] CIM_ObjectManagerCommunicationMechanism.Version not set

2008-05-30 Sean Swehla <smswehla@linux.vnet.ibm.com>

    * cimXmlOps.y
    Fixed [ 1923373 ] SFCB GetClass defaults optional IncludeQualifiers=false
    (Based on patch from Mike Lisanke)

2008-05-30 Sean Swehla <smswehla@linux.vnet.ibm.com>

    * support.c
    Reversed part of the patch for 1928541 to fix deadlock

2008-05-29 Chris Buccella <buccella@linux.vnet.ibm.com>

	* providerDrv.c:
	Fixed [ 1970808 ] sfcb hangs after getinstance requests 
	(for 1.3.1 release; current cvs still needs work)

2008-05-20 Sean Swehla <smswehla@linux.vnet.ibm.com>

    * brokerOs.c, instance.c, support.c
    Fixed [ 1928541 ] sfcb binary interface memory leak on CMGetObjectPath
    Changed *alloc's of mutexes to use memAlloc/tracked memory

2008-05-19 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

    * constClass.c
    Fixed [ 1946202 ] getPropQualifier function attempts to free non-malloced mem
    (Based on patch from Nicholas Bofferding)

2008-05-09 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

    * Makefile.am
    * footprint.pl
	Added makefile rule and supporting script to do 
	disk and memory footprinting.

2008-05-07 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* configure.ac, sfcBroker.c, default.reg.in, cimXmlRequest.c, 
	Makefile.am:
	Fixed 1953683: allow sfcb to be built to support localconnect only
	(patch by Luong Nguyen-Duy)
	
2008-05-06 Chris Buccella  <buccella@linux.vnet.ibm.com>

	* msgqueue.c: